exports[`no-test-global-configuration > invalid(1): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tsnapshot.setDefaultSnapshotSerializers([]);\n}); 1`] = `

  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
  3 | 	snapshot.setDefaultSnapshotSerializers([]);
  4 | });

`;

exports[`no-test-global-configuration > invalid(1): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tsnapshot.setDefaultSnapshotSerializers([]);\n}); 2`] = `

Message:
  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
> 3 | 	snapshot.setDefaultSnapshotSerializers([]);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.
  4 | });

`;

exports[`no-test-global-configuration > invalid(10): import test, {snapshot} from 'node:test';\ntest.only('t', () => { snapshot.setResolveSnapshotPath(path => path); }); 1`] = `

  1 | import test, {snapshot} from 'node:test';
  2 | test.only('t', () => { snapshot.setResolveSnapshotPath(path => path); });

`;

exports[`no-test-global-configuration > invalid(10): import test, {snapshot} from 'node:test';\ntest.only('t', () => { snapshot.setResolveSnapshotPath(path => path); }); 2`] = `

Message:
  1 | import test, {snapshot} from 'node:test';
> 2 | test.only('t', () => { snapshot.setResolveSnapshotPath(path => path); });
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(11): import test, {assert} from 'node:test';\ntest('parent', t => { t.test('child', () => { assert.register('custom', () => {}); }); }); 1`] = `

  1 | import test, {assert} from 'node:test';
  2 | test('parent', t => { t.test('child', () => { assert.register('custom', () => {}); }); });

`;

exports[`no-test-global-configuration > invalid(11): import test, {assert} from 'node:test';\ntest('parent', t => { t.test('child', () => { assert.register('custom', () => {}); }); }); 2`] = `

Message:
  1 | import test, {assert} from 'node:test';
> 2 | test('parent', t => { t.test('child', () => { assert.register('custom', () => {}); }); });
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(12): import test, {snapshot} from 'node:test';\ntest('parent', t => { t.test.only('child', () => { snapshot.setDefaultSnapshotSerializers([]); }); }); 1`] = `

  1 | import test, {snapshot} from 'node:test';
  2 | test('parent', t => { t.test.only('child', () => { snapshot.setDefaultSnapshotSerializers([]); }); });

`;

exports[`no-test-global-configuration > invalid(12): import test, {snapshot} from 'node:test';\ntest('parent', t => { t.test.only('child', () => { snapshot.setDefaultSnapshotSerializers([]); }); }); 2`] = `

Message:
  1 | import test, {snapshot} from 'node:test';
> 2 | test('parent', t => { t.test.only('child', () => { snapshot.setDefaultSnapshotSerializers([]); }); });
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(13): import {test as run, snapshot} from 'node:test';\nrun('t', () => { snapshot.setDefaultSnapshotSerializers([]); }); 1`] = `

  1 | import {test as run, snapshot} from 'node:test';
  2 | run('t', () => { snapshot.setDefaultSnapshotSerializers([]); });

`;

exports[`no-test-global-configuration > invalid(13): import {test as run, snapshot} from 'node:test';\nrun('t', () => { snapshot.setDefaultSnapshotSerializers([]); }); 2`] = `

Message:
  1 | import {test as run, snapshot} from 'node:test';
> 2 | run('t', () => { snapshot.setDefaultSnapshotSerializers([]); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(14): import {assert, it as specify} from 'node:test';\nspecify('t', () => { assert.register('custom', () => {}); }); 1`] = `

  1 | import {assert, it as specify} from 'node:test';
  2 | specify('t', () => { assert.register('custom', () => {}); });

`;

exports[`no-test-global-configuration > invalid(14): import {assert, it as specify} from 'node:test';\nspecify('t', () => { assert.register('custom', () => {}); }); 2`] = `

Message:
  1 | import {assert, it as specify} from 'node:test';
> 2 | specify('t', () => { assert.register('custom', () => {}); });
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(15): import {snapshot, test} from 'node:test';\ntest.describe('suite', () => { test.beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); }); 1`] = `

  1 | import {snapshot, test} from 'node:test';
  2 | test.describe('suite', () => { test.beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); });

`;

exports[`no-test-global-configuration > invalid(15): import {snapshot, test} from 'node:test';\ntest.describe('suite', () => { test.beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); }); 2`] = `

Message:
  1 | import {snapshot, test} from 'node:test';
> 2 | test.describe('suite', () => { test.beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); });
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(16): import {assert, it as specify} from 'node:test';\nspecify.suite('suite', () => { specify.beforeEach(() => { assert.register('custom', () => {}); }); }); 1`] = `

  1 | import {assert, it as specify} from 'node:test';
  2 | specify.suite('suite', () => { specify.beforeEach(() => { assert.register('custom', () => {}); }); });

`;

exports[`no-test-global-configuration > invalid(16): import {assert, it as specify} from 'node:test';\nspecify.suite('suite', () => { specify.beforeEach(() => { assert.register('custom', () => {}); }); }); 2`] = `

Message:
  1 | import {assert, it as specify} from 'node:test';
> 2 | specify.suite('suite', () => { specify.beforeEach(() => { assert.register('custom', () => {}); }); });
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(17): import {default as run, snapshot} from 'node:test';\nrun('t', () => { run.snapshot.setResolveSnapshotPath(path => path); snapshot.setDefaultSnapshotSerializers([]); }); 1`] = `

  1 | import {default as run, snapshot} from 'node:test';
  2 | run('t', () => { run.snapshot.setResolveSnapshotPath(path => path); snapshot.setDefaultSnapshotSerializers([]); });

`;

exports[`no-test-global-configuration > invalid(17): import {default as run, snapshot} from 'node:test';\nrun('t', () => { run.snapshot.setResolveSnapshotPath(path => path); snapshot.setDefaultSnapshotSerializers([]); }); 2`] = `

Message:
  1 | import {default as run, snapshot} from 'node:test';
> 2 | run('t', () => { run.snapshot.setResolveSnapshotPath(path => path); snapshot.setDefaultSnapshotSerializers([]); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(17): import {default as run, snapshot} from 'node:test';\nrun('t', () => { run.snapshot.setResolveSnapshotPath(path => path); snapshot.setDefaultSnapshotSerializers([]); }); 3`] = `

Message:
  1 | import {default as run, snapshot} from 'node:test';
> 2 | run('t', () => { run.snapshot.setResolveSnapshotPath(path => path); snapshot.setDefaultSnapshotSerializers([]); });
    |                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(18): import {'snapshot' as snapshots, 'test' as run} from 'node:test';\nrun('t', () => { snapshots.setDefaultSnapshotSerializers([]); }); 1`] = `

  1 | import {'snapshot' as snapshots, 'test' as run} from 'node:test';
  2 | run('t', () => { snapshots.setDefaultSnapshotSerializers([]); });

`;

exports[`no-test-global-configuration > invalid(18): import {'snapshot' as snapshots, 'test' as run} from 'node:test';\nrun('t', () => { snapshots.setDefaultSnapshotSerializers([]); }); 2`] = `

Message:
  1 | import {'snapshot' as snapshots, 'test' as run} from 'node:test';
> 2 | run('t', () => { snapshots.setDefaultSnapshotSerializers([]); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(19): import {beforeEach, describe, snapshot} from 'node:test';\ndescribe('suite', () => { beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); }); 1`] = `

  1 | import {beforeEach, describe, snapshot} from 'node:test';
  2 | describe('suite', () => { beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); });

`;

exports[`no-test-global-configuration > invalid(19): import {beforeEach, describe, snapshot} from 'node:test';\ndescribe('suite', () => { beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); }); 2`] = `

Message:
  1 | import {beforeEach, describe, snapshot} from 'node:test';
> 2 | describe('suite', () => { beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); });
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(2): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tsnapshot.setResolveSnapshotPath(path => path);\n}); 1`] = `

  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
  3 | 	snapshot.setResolveSnapshotPath(path => path);
  4 | });

`;

exports[`no-test-global-configuration > invalid(2): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tsnapshot.setResolveSnapshotPath(path => path);\n}); 2`] = `

Message:
  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
> 3 | 	snapshot.setResolveSnapshotPath(path => path);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.
  4 | });

`;

exports[`no-test-global-configuration > invalid(20): import test, {describe, snapshot} from 'node:test';\ndescribe('suite', () => { test.beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); }); 1`] = `

  1 | import test, {describe, snapshot} from 'node:test';
  2 | describe('suite', () => { test.beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); });

`;

exports[`no-test-global-configuration > invalid(20): import test, {describe, snapshot} from 'node:test';\ndescribe('suite', () => { test.beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); }); 2`] = `

Message:
  1 | import test, {describe, snapshot} from 'node:test';
> 2 | describe('suite', () => { test.beforeEach(() => { snapshot.setResolveSnapshotPath(path => path); }); });
    |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(21): import * as nodeTest from 'node:test';\nnodeTest.describe('suite', () => { nodeTest.test.beforeEach(() => { nodeTest.snapshot.setResolveSnapshotPath(path => path); }); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.describe('suite', () => { nodeTest.test.beforeEach(() => { nodeTest.snapshot.setResolveSnapshotPath(path => path); }); });

`;

exports[`no-test-global-configuration > invalid(21): import * as nodeTest from 'node:test';\nnodeTest.describe('suite', () => { nodeTest.test.beforeEach(() => { nodeTest.snapshot.setResolveSnapshotPath(path => path); }); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.describe('suite', () => { nodeTest.test.beforeEach(() => { nodeTest.snapshot.setResolveSnapshotPath(path => path); }); });
    |                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(22): import * as nodeTest from 'node:test';\nnodeTest.default('default', () => { nodeTest.default.snapshot.setResolveSnapshotPath(path => path); });\nnodeTest.test('test', () => { nodeTest.test.assert.register('custom', () => {}); });\nnodeTest.it('it', () => { nodeTest.it.assert.register('custom', () => {}); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.default('default', () => { nodeTest.default.snapshot.setResolveSnapshotPath(path => path); });
  3 | nodeTest.test('test', () => { nodeTest.test.assert.register('custom', () => {}); });
  4 | nodeTest.it('it', () => { nodeTest.it.assert.register('custom', () => {}); });

`;

exports[`no-test-global-configuration > invalid(22): import * as nodeTest from 'node:test';\nnodeTest.default('default', () => { nodeTest.default.snapshot.setResolveSnapshotPath(path => path); });\nnodeTest.test('test', () => { nodeTest.test.assert.register('custom', () => {}); });\nnodeTest.it('it', () => { nodeTest.it.assert.register('custom', () => {}); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.default('default', () => { nodeTest.default.snapshot.setResolveSnapshotPath(path => path); });
    |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.
  3 | nodeTest.test('test', () => { nodeTest.test.assert.register('custom', () => {}); });
  4 | nodeTest.it('it', () => { nodeTest.it.assert.register('custom', () => {}); });

`;

exports[`no-test-global-configuration > invalid(22): import * as nodeTest from 'node:test';\nnodeTest.default('default', () => { nodeTest.default.snapshot.setResolveSnapshotPath(path => path); });\nnodeTest.test('test', () => { nodeTest.test.assert.register('custom', () => {}); });\nnodeTest.it('it', () => { nodeTest.it.assert.register('custom', () => {}); }); 3`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.default('default', () => { nodeTest.default.snapshot.setResolveSnapshotPath(path => path); });
> 3 | nodeTest.test('test', () => { nodeTest.test.assert.register('custom', () => {}); });
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.
  4 | nodeTest.it('it', () => { nodeTest.it.assert.register('custom', () => {}); });

`;

exports[`no-test-global-configuration > invalid(22): import * as nodeTest from 'node:test';\nnodeTest.default('default', () => { nodeTest.default.snapshot.setResolveSnapshotPath(path => path); });\nnodeTest.test('test', () => { nodeTest.test.assert.register('custom', () => {}); });\nnodeTest.it('it', () => { nodeTest.it.assert.register('custom', () => {}); }); 4`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.default('default', () => { nodeTest.default.snapshot.setResolveSnapshotPath(path => path); });
  3 | nodeTest.test('test', () => { nodeTest.test.assert.register('custom', () => {}); });
> 4 | nodeTest.it('it', () => { nodeTest.it.assert.register('custom', () => {}); });
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(23): import {test} from 'node:test';\ntest.test('static test', () => { test.test.snapshot.setResolveSnapshotPath(path => path); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test.test('static test', () => { test.test.snapshot.setResolveSnapshotPath(path => path); });

`;

exports[`no-test-global-configuration > invalid(23): import {test} from 'node:test';\ntest.test('static test', () => { test.test.snapshot.setResolveSnapshotPath(path => path); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test.test('static test', () => { test.test.snapshot.setResolveSnapshotPath(path => path); });
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(24): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tfunction configure() { snapshot.setDefaultSnapshotSerializers([]); } configure();\n}); 1`] = `

  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
  3 | 	function configure() { snapshot.setDefaultSnapshotSerializers([]); } configure();
  4 | });

`;

exports[`no-test-global-configuration > invalid(24): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tfunction configure() { snapshot.setDefaultSnapshotSerializers([]); } configure();\n}); 2`] = `

Message:
  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
> 3 | 	function configure() { snapshot.setDefaultSnapshotSerializers([]); } configure();
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.
  4 | });

`;

exports[`no-test-global-configuration > invalid(25): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tsetImmediate(() => { assert.register('custom', () => {}); });\n}); 1`] = `

  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
  3 | 	setImmediate(() => { assert.register('custom', () => {}); });
  4 | });

`;

exports[`no-test-global-configuration > invalid(25): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tsetImmediate(() => { assert.register('custom', () => {}); });\n}); 2`] = `

Message:
  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
> 3 | 	setImmediate(() => { assert.register('custom', () => {}); });
    | 	                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.
  4 | });

`;

exports[`no-test-global-configuration > invalid(26): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tsnapshot?.setDefaultSnapshotSerializers([]);\n}); 1`] = `

  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
  3 | 	snapshot?.setDefaultSnapshotSerializers([]);
  4 | });

`;

exports[`no-test-global-configuration > invalid(26): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tsnapshot?.setDefaultSnapshotSerializers([]);\n}); 2`] = `

Message:
  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
> 3 | 	snapshot?.setDefaultSnapshotSerializers([]);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.
  4 | });

`;

exports[`no-test-global-configuration > invalid(27): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tassert.register?.('custom', () => {});\n}); 1`] = `

  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
  3 | 	assert.register?.('custom', () => {});
  4 | });

`;

exports[`no-test-global-configuration > invalid(27): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tassert.register?.('custom', () => {});\n}); 2`] = `

Message:
  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
> 3 | 	assert.register?.('custom', () => {});
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.
  4 | });

`;

exports[`no-test-global-configuration > invalid(28): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\t(snapshot as typeof snapshot).setResolveSnapshotPath(path => path);\n}); 1`] = `

  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
  3 | 	(snapshot as typeof snapshot).setResolveSnapshotPath(path => path);
  4 | });

`;

exports[`no-test-global-configuration > invalid(28): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\t(snapshot as typeof snapshot).setResolveSnapshotPath(path => path);\n}); 2`] = `

Message:
  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
> 3 | 	(snapshot as typeof snapshot).setResolveSnapshotPath(path => path);
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.
  4 | });

`;

exports[`no-test-global-configuration > invalid(29): import test from 'node:test';\n(test as typeof test)('t', () => { (test.assert as typeof test.assert).register('custom', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | (test as typeof test)('t', () => { (test.assert as typeof test.assert).register('custom', () => {}); });

`;

exports[`no-test-global-configuration > invalid(29): import test from 'node:test';\n(test as typeof test)('t', () => { (test.assert as typeof test.assert).register('custom', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | (test as typeof test)('t', () => { (test.assert as typeof test.assert).register('custom', () => {}); });
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(3): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tassert.register('custom', () => {});\n}); 1`] = `

  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
  3 | 	assert.register('custom', () => {});
  4 | });

`;

exports[`no-test-global-configuration > invalid(3): import test, {assert, snapshot} from 'node:test';\ntest('t', () => {\n\tassert.register('custom', () => {});\n}); 2`] = `

Message:
  1 | import test, {assert, snapshot} from 'node:test';
  2 | test('t', () => {
> 3 | 	assert.register('custom', () => {});
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.
  4 | });

`;

exports[`no-test-global-configuration > invalid(30): import test, {snapshot} from 'node:test';\n(test<string>)('t', () => { (snapshot.setDefaultSnapshotSerializers<unknown>)([]); }); 1`] = `

  1 | import test, {snapshot} from 'node:test';
  2 | (test<string>)('t', () => { (snapshot.setDefaultSnapshotSerializers<unknown>)([]); });

`;

exports[`no-test-global-configuration > invalid(30): import test, {snapshot} from 'node:test';\n(test<string>)('t', () => { (snapshot.setDefaultSnapshotSerializers<unknown>)([]); }); 2`] = `

Message:
  1 | import test, {snapshot} from 'node:test';
> 2 | (test<string>)('t', () => { (snapshot.setDefaultSnapshotSerializers<unknown>)([]); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(4): import test, {snapshot as testSnapshot} from 'node:test';\ntest('t', () => { testSnapshot.setDefaultSnapshotSerializers([]); }); 1`] = `

  1 | import test, {snapshot as testSnapshot} from 'node:test';
  2 | test('t', () => { testSnapshot.setDefaultSnapshotSerializers([]); });

`;

exports[`no-test-global-configuration > invalid(4): import test, {snapshot as testSnapshot} from 'node:test';\ntest('t', () => { testSnapshot.setDefaultSnapshotSerializers([]); }); 2`] = `

Message:
  1 | import test, {snapshot as testSnapshot} from 'node:test';
> 2 | test('t', () => { testSnapshot.setDefaultSnapshotSerializers([]); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(5): import test, {assert as testAssert} from 'node:test';\ntest('t', () => { testAssert.register('custom', () => {}); }); 1`] = `

  1 | import test, {assert as testAssert} from 'node:test';
  2 | test('t', () => { testAssert.register('custom', () => {}); });

`;

exports[`no-test-global-configuration > invalid(5): import test, {assert as testAssert} from 'node:test';\ntest('t', () => { testAssert.register('custom', () => {}); }); 2`] = `

Message:
  1 | import test, {assert as testAssert} from 'node:test';
> 2 | test('t', () => { testAssert.register('custom', () => {}); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(6): import test from 'node:test';\ntest('t', () => { test.snapshot.setResolveSnapshotPath(path => path); test.assert.register('custom', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', () => { test.snapshot.setResolveSnapshotPath(path => path); test.assert.register('custom', () => {}); });

`;

exports[`no-test-global-configuration > invalid(6): import test from 'node:test';\ntest('t', () => { test.snapshot.setResolveSnapshotPath(path => path); test.assert.register('custom', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', () => { test.snapshot.setResolveSnapshotPath(path => path); test.assert.register('custom', () => {}); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(6): import test from 'node:test';\ntest('t', () => { test.snapshot.setResolveSnapshotPath(path => path); test.assert.register('custom', () => {}); }); 3`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', () => { test.snapshot.setResolveSnapshotPath(path => path); test.assert.register('custom', () => {}); });
    |                                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(7): import {test} from 'node:test';\ntest('t', () => { test.snapshot.setDefaultSnapshotSerializers([]); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('t', () => { test.snapshot.setDefaultSnapshotSerializers([]); });

`;

exports[`no-test-global-configuration > invalid(7): import {test} from 'node:test';\ntest('t', () => { test.snapshot.setDefaultSnapshotSerializers([]); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('t', () => { test.snapshot.setDefaultSnapshotSerializers([]); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(8): import {it} from 'node:test';\nit('t', () => { it.assert.register('custom', () => {}); }); 1`] = `

  1 | import {it} from 'node:test';
  2 | it('t', () => { it.assert.register('custom', () => {}); });

`;

exports[`no-test-global-configuration > invalid(8): import {it} from 'node:test';\nit('t', () => { it.assert.register('custom', () => {}); }); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it('t', () => { it.assert.register('custom', () => {}); });
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(9): import * as nodeTest from 'node:test';\nnodeTest.test('t', () => { nodeTest.snapshot.setDefaultSnapshotSerializers([]); nodeTest.assert.register('custom', () => {}); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('t', () => { nodeTest.snapshot.setDefaultSnapshotSerializers([]); nodeTest.assert.register('custom', () => {}); });

`;

exports[`no-test-global-configuration > invalid(9): import * as nodeTest from 'node:test';\nnodeTest.test('t', () => { nodeTest.snapshot.setDefaultSnapshotSerializers([]); nodeTest.assert.register('custom', () => {}); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test('t', () => { nodeTest.snapshot.setDefaultSnapshotSerializers([]); nodeTest.assert.register('custom', () => {}); });
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;

exports[`no-test-global-configuration > invalid(9): import * as nodeTest from 'node:test';\nnodeTest.test('t', () => { nodeTest.snapshot.setDefaultSnapshotSerializers([]); nodeTest.assert.register('custom', () => {}); }); 3`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test('t', () => { nodeTest.snapshot.setDefaultSnapshotSerializers([]); nodeTest.assert.register('custom', () => {}); });
    |                                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not configure \`node:test\` inside a test. This changes process-wide state.

`;
